--- a/src/main/resources/templates/comp/updateForm.mustache
+++ b/src/main/resources/templates/comp/updateForm.mustache
@@ -39,12 +39,12 @@
 			</div>
 			-->
 
-			<div class="input-group mb-3 ms-1">
+			<div class="input-group mb-3">
 				<span class="input-group-text">공고명</span>
 				<input type="text" class="form-control" name="title" value="{{posting.title}}">
 			</div>
 
-			<div class="input-group mb-3 ms-1">
+			<div class="input-group mb-3">
 				<span class="input-group-text">공고내용</span>
 				<textarea class="form-control" rows="10" name="desc">{{posting.desc}}</textarea>
 			</div>
@@ -52,7 +52,7 @@
 
 		
 		
-			<div class="ms-1 card mb-3">
+			<div class="card mb-3">
 				<h4 class="mt-2 mb-0 text-center">직무</h4>
 				<div class="text-center">필수 선택</div>
 				<!--
@@ -112,7 +112,7 @@
 			</div>
 
 
-			<div class="ms-1 card mb-3">
+			<div class="card mb-3">
 				<h4 class="mt-2 mb-0 text-center">기술</h4>
 				<div class="text-center">여러 개 선택 가능합니다.</div>
 				<!--
@@ -139,7 +139,7 @@
 
 
 
-			<div class="ms-1 card mb-3">
+			<div class="card mb-3">
 				<h4 class="mt-2 mb-0 text-center">연차</h4>
 				<hr class="m-1">
 				<div class="d-flex flex-wrap">
@@ -210,7 +210,7 @@
 
 
 
-			<div class="ms-1 card mb-3">
+			<div class="card mb-3">
 				<h4 class="mt-2 mb-0 text-center">학력</h4>
 				<hr class="m-1">
 				<div class="d-flex flex-wrap">
@@ -254,7 +254,7 @@
 
 
 
-			<div class="ms-1 card mb-3">
+			<div class=" card mb-3">
 				<h4 class="mt-2 mb-0 text-center">기간</h4>
 				<hr class="m-1">
 				<div class="m-2 align-self-center">
@@ -266,7 +266,7 @@
 			</div>
 
 
-			<div class="ms-1 card mb-3">
+			<div class="card mb-3">
 				<h4 class="mt-2 mb-0 text-center">지역</h4>
 				<hr class="m-1">
 
