--- a/src/main/resources/templates/comp/saveForm.mustache
+++ b/src/main/resources/templates/comp/saveForm.mustache
@@ -43,12 +43,12 @@
 			</div>
 			-->
 
-			<div class="input-group mb-3 ms-1">
+			<div class="input-group mb-3">
 				<span class="input-group-text">공고명</span>
 				<input type="text" class="form-control" name="title">
 			</div>
 
-			<div class="input-group mb-3 ms-1">
+			<div class="input-group mb-3">
 				<span class="input-group-text">공고내용</span>
 				<textarea class="form-control" rows="10" name="desc"></textarea>
 			</div>
@@ -56,7 +56,7 @@
 
 		
 		
-			<div class="ms-1 card mb-3">
+			<div class="card mb-3">
 				<h4 class="mt-2 mb-0 text-center">직무</h4>
 				<div class="text-center">필수 선택</div>
 				<!--
@@ -116,7 +116,7 @@
 			</div>
 
 
-			<div class="ms-1 card mb-3">
+			<div class="card mb-3">
 				<h4 class="mt-2 mb-0 text-center">기술</h4>
 				<div class="text-center">여러 개 선택 가능합니다.</div>
 				<!--
@@ -143,7 +143,7 @@
 
 
 
-			<div class="ms-1 card mb-3">
+			<div class="card mb-3">
 				<h4 class="mt-2 mb-0 text-center">연차</h4>
 				<hr class="m-1">
 				<div class="d-flex flex-wrap">
@@ -214,7 +214,7 @@
 
 
 
-			<div class="ms-1 card mb-3">
+			<div class="card mb-3">
 				<h4 class="mt-2 mb-0 text-center">학력</h4>
 				<hr class="m-1">
 				<div class="d-flex flex-wrap">
@@ -258,7 +258,7 @@
 
 
 
-			<div class="ms-1 card mb-3">
+			<div class="card mb-3">
 				<h4 class="mt-2 mb-0 text-center">기간</h4>
 				<hr class="m-1">
 				<div class="m-2 align-self-center">
@@ -270,7 +270,7 @@
 			</div>
 
 
-			<div class="ms-1 card mb-3">
+			<div class="card mb-3">
 				<h4 class="mt-2 mb-0 text-center">지역</h4>
 				<hr class="m-1">
 
@@ -300,7 +300,7 @@
 			
 
 			<div class="d-flex">
-				<input id="button" class="mb-3 ms-1 w-100 btn btn-success" type="submit" value="공고 등록하기" onclick="">
+				<input id="button" class="mb-3 w-100 btn btn-success" type="submit" value="공고 등록하기" onclick="">
 			</div>
 
 		</form>
