--- a/src/main/resources/templates/user/applyList.mustache
+++ b/src/main/resources/templates/user/applyList.mustache
@@ -62,13 +62,13 @@
 
 				<tbody>
 					{{#applyList}}
-						<tr onclick="redirectToPage('/notice/{{ posting.id }}')">
-							<td>{{ id }}</td>
-							<td>{{ posting.title }}</td>
-							<td>{{ resume.title }}</td>
-							<td>{{ posting.position }}</td>
-							<td>{{ statement }}</td>
-						</tr>
+					<tr onclick="redirectToPage('/notice/')">
+						<td>{{ id }}</td>
+						<td>{{ posting.title }}</td>
+						<td>{{ resume.title }}</td>
+						<td>{{ posting.position }}</td>
+						<td>{{ statement }}</td>
+					</tr>
 					{{/applyList}}
 				</tbody>
 			</table>
