--- a/src/main/resources/templates/comp/detail.mustache
+++ b/src/main/resources/templates/comp/detail.mustache
@@ -8,7 +8,7 @@
 
 	<div class="d-flex">
 		<div class="m-1 col-4 d-flex flex-column align-items-center overflow-hidden" style="width:170px; height:280px;">
-			<img src="../../../images/{{posting.user.compname}}_logo.png" class=""/>
+			<img src="../../../images/{{posting.user.compname}}_logo.png" class="" />
 		</div>
 
 		<div class="col-8 p-2">
@@ -31,7 +31,7 @@
 			<div class="input-group mb-2">
 				<span class="input-group-text">홈페이지</span>
 				<input type="text" class="form-control"
-				       value="{{#posting.user.homepage}}{{posting.user.homepage}}{{/posting.user.homepage}}" disabled>
+					value="{{#posting.user.homepage}}{{posting.user.homepage}}{{/posting.user.homepage}}" disabled>
 			</div>
 		</div>
 
@@ -55,40 +55,40 @@
 	<div class="input-group mb-3 ms-1">
 		<span class="input-group-text">기술</span>
 		<input type="text" class="form-control"
-		       value="{{#posting.postingSkill}}{{skill.skillname}}, {{/posting.postingSkill}}" disabled>
+			value="{{#posting.postingSkill}}{{skill.skillname}}, {{/posting.postingSkill}}" disabled>
 	</div>
 
 	<div class="input-group mb-3 ms-1">
 		<span class="input-group-text">학력</span>
 		<input type="text" class="form-control"
-		       value="{{#posting.education}}{{posting.education}}{{/posting.education}}" disabled>
+			value="{{#posting.education}}{{posting.education}}{{/posting.education}}" disabled>
 	</div>
 
 	<div class="input-group mb-3 ms-1">
 		<span class="input-group-text">연차</span>
 		<input type="text" class="form-control" value="{{#posting.career}}{{posting.career}}{{/posting.career}}"
-		       disabled>
+			disabled>
 	</div>
 
 	<div class="input-group mb-3 ms-1">
 		<span class="input-group-text">지역</span>
 		<input type="text" class="form-control" value="{{#posting.region}}{{posting.region}}{{/posting.region}}"
-		       disabled>
+			disabled>
 	</div>
 
 	<div class="input-group mb-3 ms-1">
 		<span class="input-group-text">종료일</span>
 		<input type="text" class="form-control"
-		       value="{{#posting.expiryDate}}{{posting.expiryDate}}{{/posting.expiryDate}}" disabled>
+			value="{{#posting.expiryDate}}{{posting.expiryDate}}{{/posting.expiryDate}}" disabled>
 	</div>
 
 
 	<div class="d-flex">
 		{{^sessionComp.compname}}
-			<button type="button" class="w-50 mb-3 me-2 btn btn-success">지원하기</button>
-			<button type="button" class="w-50 mb-3 ms-2 btn btn-warning">북마크하기</button>{{/sessionComp.compname}}
+		<a href="/user/applyForm/{{postingId}}" class="w-50 mb-3 ms-2 btn btn-info">지원하기</a> {{! 지원하기 하이퍼링크연결 }}
+		<button type="button" class="w-50 mb-3 ms-2 btn btn-warning">북마크하기</button>
+		{{/sessionComp.compname}}
 	</div>
-
 </div>
 
 
