지원하기, 지원내역(공고클릭,이력서클릭) 완료 + 화면비율 맞추기

--- a/src/main/resources/templates/user/applyForm.mustache
+++ b/src/main/resources/templates/user/applyForm.mustache
@@ -18,7 +18,8 @@
 				<div class="col-7 p-3">
 					<div class="input-group mb-3">
 						<span class="input-group-text">공고명</span>
-						<input type="text" class="form-control" name="postingTitle" value="{{posting.title}}" readonly>
+						<input type="text" class="form-control w-50" name="postingTitle" value="{{posting.title}}"
+							readonly>
 					</div>
 					<div class="input-group mb-3">
 						<span class="input-group-text">회사명</span>
