--- a/src/main/resources/templates/user/applyList.mustache
+++ b/src/main/resources/templates/user/applyList.mustache
@@ -24,6 +24,13 @@
 
 	.tg th {
 		font-weight: bold;
+		background-color: #f2f2f2;
+	}
+
+	.tg td.clickable {
+		cursor: pointer;
+		text-decoration: underline;
+		/* 클릭 가능한 셀에 밑줄 추가 */
 	}
 </style>
 
@@ -87,7 +94,7 @@
 		if (targetType === 'posting') {
 			window.location.href = '/comp/posting/' + itemId;
 		} else if (targetType === 'resume') {
-			window.location.href = '/resume/' + itemId;
+			window.location.href = '/user/resume/' + itemId;
 		}
 	}
 
