--- a/src/main/resources/templates/user/resumeForm.mustache
+++ b/src/main/resources/templates/user/resumeForm.mustache
@@ -22,11 +22,15 @@
 		</div>
 		<div class="col-9 ms-3">
 			<h1 class="text-center mt-2">이력서 등록</h1>
-			<form action="/user/resumeSave" method="post">
+			<form action="/user/resumeSave" method="post" enctype="multipart/form-data">
 				<div class="d-flex">
 					<div class="m-2 col-4 d-flex flex-column align-items-center">
-						<img src="../../../images/basic.jpg" class="img-fluid rounded-circle"
-						     style="width:150px; height:150px;"/>
+						<img id="preview" src="../../../../../images/{{sessionUser.photo}}"
+							class="img-fluid rounded-circle" style="width:150px; height:150px;" />
+						<div class="input-group mb-3 mt-3">
+							<input type="file" class="form-control" placeholder="Enter pto" name="pto"
+								onchange="changePic(event)">
+						</div>
 					</div>
 
 					<div class="col-8 p-2">
@@ -68,12 +72,12 @@
 				<div class="card input-group ms-2 mb-3">
 					<span class="input-group-text">보유 기술</span>
 					<div class="d-flex flex-wrap">
-					{{#skillList}}
+						{{#skillList}}
 						<div class="form-check d-inline-block ms-3 me-2">
 							<input class="form-check-input" type="checkbox" id="" value="{{id}}" name="skillList">
 							<label class="form-check-label">{{skillname}}</label>
 						</div>
-					{{/skillList}}
+						{{/skillList}}
 					</div>
 				</div>
 
@@ -83,8 +87,8 @@
 				</div>
 
 
-				<input type="checkbox" name="disclosure" value="true"/> 이력서 공개 여부
-				<br/>
+				<input type="checkbox" name="disclosure" value="true" /> 이력서 공개 여부
+				<br />
 				<!-- disabled속성은 입력할 수 없는 input태그를 만든다 -->
 				<!-- disabled속성은 적용된 input은 서버로 데이터가 전송되지 않는다-->
 				<!-- readonly속성은 읽기전용 input태그를 만든다 -->
@@ -100,5 +104,22 @@
 	<div class="col-xl-3 col-lg-2 col-md-1 col-sm-auto"></div>
 </div>
 
+<script>
+	function changePic(e1) {
+		console.log(e1);
+		let f = e1.srcElement.files[0];
 
+		if (!f.type.match("image.*")) {
+			alert("이미지를 등록해주세요.");
+			return;
+		}
+
+		let reader = new FileReader(); //버퍼를 하나 만듦 ,메모리에 끌어 올릴려고!
+		reader.onload = function (e2) { // 파일이 다 읽어지면 콜백됨
+			let previewEl = document.querySelector("#preview");
+			previewEl.setAttribute("src", e2.target.result);
+		}
+		reader.readAsDataURL(f); // 파일 읽기, 버퍼로 다 읽으면 onload() 발동 -> 파일 다 읽으면 콜백
+	}
+</script>
 {{> layout/footer}}
