--- a/src/main/resources/templates/user/updateForm.mustache
+++ b/src/main/resources/templates/user/updateForm.mustache
@@ -26,14 +26,16 @@
 		<div class="col-9 ms-3">
 			<h1 class="text-center mt-2">마이페이지</h1>
 
-			<div class="d-flex">
-				<div class="m-2 col-4 d-flex flex-column align-items-center">
-					<img id="preview" src="../../../../../images/{{user.photo}}" class="circle_avatar"
-					     style="width:150px; height:150px;"/>
-
-				</div>
-
-				<form action="/user/update" method="post" enctype="multipart/form-data">
+			<form action="/user/update" method="post" enctype="multipart/form-data">
+				<div class="d-flex">
+					<div class="m-2 col-4 d-flex flex-column align-items-center">
+						<img id="preview" src="../../../../../images/{{user.photo}}" class="img-fluid rounded-circle"
+							style="width:150px; height:150px;" />
+						<div class="input-group mb-3 mt-1">
+							<input type="file" class="form-control" placeholder="Enter pto" name="pto"
+								onchange="changePic(event)">
+						</div>
+					</div>
 
 					<div>
 						<div class="input-group col-6 mb-3">
@@ -52,20 +54,13 @@
 							<span class="input-group-text">생년월일</span>
 							<input type="date" class="form-control" value="{{user.birth}}" name="birth">
 						</div>
-						<div class="input-group mb-3">
-							<input type="file" class="form-control" placeholder="Enter pto" name="pto"
-							       onchange="changePic(event)">
-						</div>
 					</div>
-					<div>
-						<input id="button" class=" btn btn-primary m-2 mb-3 w-100" type="submit" value="수정">
-					</div>
-				</form>
 
-
-			</div>
-
-
+				</div>
+				<div>
+					<input id="button" class=" btn btn-primary m-2 mb-3 w-100" type="submit" value="수정">
+				</div>
+			</form>
 		</div>
 
 	</div>
