--- a/src/main/resources/templates/user/applyList.mustache
+++ b/src/main/resources/templates/user/applyList.mustache
@@ -1,19 +1,15 @@
 {{> layout/header}}
-
 <!-- 15번 개인지원내역 화면-->
-
 <style>
 	.main {
 		flex: 3;
 		padding: 20px;
 	}
-
 	.tg {
 		border-collapse: collapse;
 		border-spacing: 0;
 		width: 100%;
 	}
-
 	.tg th,
 	.tg td {
 		border: 1px solid black;
@@ -21,15 +17,19 @@
 		text-align: left;
 		cursor: pointer;
 	}
-
 	.tg th {
 		font-weight: bold;
+		background-color: #f2f2f2;
+	}
+	.tg td.clickable {
+		cursor: pointer;
+		text-decoration: underline;
+		/* 클릭 가능한 셀에 밑줄 추가 */
 	}
 </style>
 
 <div class="d-flex mb-3">
 	<div class="col-2"></div>
-
 	<div class="class col-8 h-auto d-flex border border-info">
 		<div class="bg-info col-2">
 			<div class="m-2"></div>
@@ -46,7 +46,6 @@
 			<a href="recommendForm" class="w-100 btn btn-info">기업추천</a>
 			<div class="m-2"></div>
 		</div>
-
 		<div class="main col-10">
 			<h1 class="text-center">지원내역</h1>
 			<table class="tg">
@@ -62,10 +61,10 @@
 
 				<tbody>
 					{{#applyList}}
-						<tr onclick="redirectToPage('/notice/{{ posting.id }}')">
+						<tr>
 							<td>{{ id }}</td>
-							<td>{{ posting.title }}</td>
-							<td>{{ resume.title }}</td>
+							<td class="clickable" data-type="posting" data-id="{{ posting.id }}">{{ posting.title }}</td>
+							<td class="clickable" data-type="resume" data-id="{{ resume.id }}">{{ resume.title }}</td>
 							<td>{{ posting.position }}</td>
 							<td>{{ statement }}</td>
 						</tr>
@@ -77,4 +76,22 @@
 	<div class="col-2"></div>
 </div>
 
+
+<script>
+	// 클릭 이벤트 핸들러 함수
+	function handleItemClick(event) {
+		const targetType = event.target.getAttribute('data-type');
+		const itemId = event.target.getAttribute('data-id');
+		if (targetType === 'posting') {
+			window.location.href = '/comp/posting/' + itemId;
+		} else if (targetType === 'resume') {
+			window.location.href = '/user/resume/' + itemId;
+		}
+	}
+	// 모든 클릭 가능한 항목에 클릭 이벤트 핸들러 등록
+	const clickableItems = document.querySelectorAll('.clickable');
+	clickableItems.forEach((item) => {
+		item.addEventListener('click', handleItemClick);
+	});
+</script>
 {{> layout/footer}}
